--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
+    <!-- Bootstrap core CSS -->
+    <link href="/css/md/bootstrap.css" rel="stylesheet">
+    <!-- Material Design Bootstrap -->
+    <link href="/css/md/mdb.css" rel="stylesheet">
+    <!-- Your custom styles (optional) -->
+    <link href="/css/md/style.css" rel="stylesheet">
+
+
     <title>test</title>
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but test doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+</head>
+<body>
+<div id="app"></div>
+
+<script type="text/javascript" src="/js/md/jquery.js"></script>
+<!-- Bootstrap tooltips -->
+<script type="text/javascript" src="/js/md/popper.js"></script>
+<!-- Bootstrap core JavaScript -->
+<script type="text/javascript" src="/js/md/bootstrap.js"></script>
+
+<!-- MDB core JavaScript -->
+<script type="text/javascript" src="/js/md/mdb.js"></script>
+</body>
+
+
 </html>
