--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <link href="/css/md/style.css" rel="stylesheet">
 
 
-    <title>test</title>
+    <title>Yepos</title>
 </head>
 <body>
 <div id="app"></div>
