--- a/public/index.html
+++ b/public/index.html
@@ -19,9 +19,7 @@
     <title>Yepos</title>
 </head>
 <body>
-<div id="app">
-
-</div>
+<div id="app"></div>
 
 <script type="text/javascript" src="/js/md/jquery.js"></script>
 <!-- Bootstrap tooltips -->
